# automatepro_bringup

./: package.xml  setup.cfg  setup.py
config/: ReadMe.md  camera_params.yaml  gnss_base_params.yaml  gnss_rover_params.yaml  imu_params.yaml  ntrip_params.yaml
launch/: core_driver.launch.py  gnss.launch.py
